[project]
name = "npudict"
version = "0.1.0"
description = "Push-to-talk voice dictation using lemonade-server NPU"
requires-python = ">=3.10"
dependencies = [
    "pynput>=1.7.6",
    "requests>=2.31",
]

[project.scripts]
npudict = "dictate:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
